fix: change About description text alignment to left

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -63,7 +63,7 @@
   font-size: 1.1rem;
   line-height: 1.8;
   color: var(--color-text-secondary);
-  text-align: justify;
+  text-align: left;
 }
 
 .about__stats {
